<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="player_error">"抱歉,播放出错"</string>

    <string-array name="video_ratio">
        <item name="16_9">16:9</item>
        <item name="4_3">4:3</item>
        <!-- <item name="FullScreen">FullScreen</item>
        <item name="Origin">Origin</item> -->
    </string-array>

    <!-- lixp -->
    <string name="initial_percent">0%</string>
    <string name="high_definition">高清</string>
    <string name="standard_definition">标清</string>
    <string name="sixteen_nine">16:9</string>
    <string name="episode">剧集</string>
    <string name="init_time">00:00</string>
    <string name="total_time">00:00</string>
    <string name="virgule"> / </string>
    <string name="time_plus">+</string>
    <string name="time_minute">-</string>
    <string name="speed">快进</string>
    <string name="rewind">快退</string>
    <string name="king_cloud">金山软件大厦3楼-云存储</string>
    <string name="replay">重新播放</string>
    <string name="play_error">哎呀，播放错误啦 </string>
    <string name="connect_failed">连接失败，请重新连接</string>
    <string name="video_test">DEMO</string>
    <string name="loading">加载中，请稍后...</string>
    <string name="gongfu">功夫</string>
    <string name="cropscreen_success">截图成功</string>
    <string name="net_speed">网速: </string>
    <string name="consumption_flow">消耗流量: </string>
    <string name="play_net">所用网络: </string>
    <string name="short_video_play_title">播放99 赞153 踩223 分享1002 评论23</string>
    <string name="short_video_item_comment">评论内容评论内容评论内容评论内容评论内容</string>
    <string name="short_video_item_fav">22</string>
    <string name="short_video_item_info">用户名ID</string>
    <string name="short_video_item_time">4:09PM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="short_video_fav_title">赞</string>
    <string name="short_video_comment_commit">评论</string>
    <string name="video_commment_item_comment">评论评论评论评论评论评论评论评论评论评论</string>
    <string name="video_comment_item_time">4:09 PM</string>
    <string name="video_comment_item_user">用户名ID</string>

    <string name="live_username">用户名</string>
    <string name="live_report">举报</string>
    <string name="live_close">关闭</string>
    <string name="live_loading">加载中</string>
    <string name="live_ing">直播中</string>
    <string name="live_time">01:02:03</string>
    <string name="live_share">分享</string>
    <string name="live_info_switch">信息开关</string>
    <string name="live_comment">说点什么吧....</string>
    <string name="live_comment_content">评论评论评论评论评论</string>
    <string name="live_info_quiet">安静模式</string>
    <string name="live_username_one">用户名123</string>
    <string name="live_fans_praise">1.2w 赞   1.2w粉丝</string>
    <string name="live_attention">关注</string>
    <string name="live_attention_person">关注播主</string>
    <string name="live_finish">直播已经结束</string>
    <string name="live_is_report">确定举报该直播？</string>
    <string name="live_yse">确定</string>
    <string name="live_no">取消</string>
    <string name="live_praise">1.2w 赞</string>
    <string name="live">直播</string>
    <string name="live_signature_line">签名档签名档签名档签名档</string>
    <string name="live_fans">粉丝</string>
    <string name="live_replay">重新播放</string>
    <string name="live_back_home">返回主页</string>
    <string name="live_replay_finish">直播回放已经结束</string>
    <string name="live_current">当前直播：</string>
    <string name="live_current_content">直播标题直播标题</string>
    <string name="live_device">直播设备：</string>
    <string name="live_device_content">iPhone 7</string>
    <string name="live_place">直播地点：</string>
    <string name="live_place_content">美国纽约</string>
    <string name="live_attention_plus">+  关注</string>
    <string name="live_replay_current_time">00:00:00</string>
    <string name="live_replay_line">/</string>
    <string name="live_replay_total_time">00:00:00</string>
    <string name="live_replay_net_error">09:00:00</string>
    <string name="live_replay_notice">路飞路飞     来了</string>
    <string name="live_fans_count">222</string>
    <string name="live_favarite_count">0</string>
    <string name="live_anchor_releat_count">100</string>


    <string name="video_detail_focus">+关注</string>
    <string name="video_detail_title">直播间信息</string>
    <string name="video_detail_content">As far as I know this is the method you would use for LOCAL dependencies, ie dependencies where the code is actually in the project structure. In my example I\'m using remote dependencies pulled from mavencentral and a custom maven repo. My goal is to avoid local code in my project so that I don\'t need submodules to update them</string>
    <string name="video_recommend_item_time">09:11:11</string>
    <string name="video_recommend_item_title">直播名称</string>
    <string name="video_recommend_item_watch">222222人正在观看</string>
    <string name="video_recommend_item_content">播放内容播放内容播放内容</string>

    <string name="video_detail_user">用户名ID</string>
    <string name="video_detail_description">个人签名个人签名个人签名个人签名个人签名</string>
    <string name="stream_small_controller_title">直播视频标题</string>
    <string name="stream_watch_tv_default">2222</string>
    <string name="stream_pop_share">分享</string>
    <string name="stream_pop_alarm">举报</string>
    <string name="stream_pop_setting">设置</string>
    <string name="stream_controller_send">发送</string>
    <string name="video_small_current_time_tv_default">当前时间</string>
    <string name="video_small_duration_time_tv_default">总时间</string>
    <string name="video_small_title_tv_default">点播视频标题</string>
    <string name="short_video_title">短视频标题</string>
    <string name="short_video_end">视频播放已经结束</string>
    <string name="short_video_content">视频播放内容</string>
    <string name="short_video_watch_count_tv_default">1232</string>
    <string name="short_video_comment_count_tv_default">12</string>
    <string name="short_video_favourate__tv_default">2210</string>
    <string name="short_video_share__tv_default">323</string>
    <string name="short_video_time_tv_default">11天前上传</string>
    <string name="short_video_item_time_title">4:09 PM</string>
    <string name="short_video_add_focus">+ 关注</string>
    <string name="app_name">VideoLibs</string>


</resources>



