<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageLiveViewClose"
            android:src="@drawable/live_close"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_person"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/imageLiveViewClose"
            android:src="@drawable/live_anchor_detail"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/text_username"
            android:text="@string/live_username_one"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_person"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView"
            android:text="@string/live_praise"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_username"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView2"
            android:text="@string/live_signature_line"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="15dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:id="@+id/layout_current_live"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_current_live"
                android:text="@string/live_current"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_current_content_live"
                android:text="@string/live_current_content"
                android:textColor="@color/white"
                android:layout_toRightOf="@+id/text_current_live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_device_live"
            android:layout_below="@+id/layout_current_live"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_device_live"
                android:text="@string/live_device"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_device_content_live"
                android:text="@string/live_device_content"
                android:textColor="@color/white"
                android:layout_toRightOf="@+id/text_device_live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_place_live"
            android:layout_below="@+id/layout_device_live"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_place_live"
                android:text="@string/live_place"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_place_content_live"
                android:text="@string/live_place_content"
                android:textColor="@color/white"
                android:layout_toRightOf="@+id/text_place_live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_live"
            android:orientation="vertical"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/layout_place_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="100"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/live"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fans"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/layout_place_live"
            android:layout_toRightOf="@+id/layout_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="100"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/live_fans"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_notice"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/layout_place_live"
            android:layout_toRightOf="@+id/layout_fans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="100"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/live_attention"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/live_attention_plus"
            android:id="@+id/live_button"
            android:textColor="@color/lightblue"
            android:background="@drawable/live_button_shape"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/layout_fans" />
    </RelativeLayout>

</RelativeLayout>
