<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="120dp"
    android:alpha="0.5"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/stream_share_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_item_large_margin"
        android:text="@string/stream_pop_share"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/stream_alarm_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_item_large_margin"
        android:text="@string/stream_pop_alarm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/stream_setting_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_item_large_margin"
        android:text="@string/stream_pop_setting"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
</LinearLayout>