<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ksy.media.widget.ui.common.fragment.DetailFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:background="@color/ksy_color_card_bg">

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/list_item_margin"
                android:src="@drawable/shortvideo_head_image" />

            <TextView
                android:id="@+id/user_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/user_img"
                android:layout_margin="@dimen/list_item_margin"
                android:textColor="@color/ksy_color_font"
                android:layout_toRightOf="@id/user_img"
                android:text="@string/video_detail_user" />

            <TextView
                android:id="@+id/comment_tv"
                android:layout_width="150dp"
                android:layout_alignLeft="@+id/user_tv"
                android:textColor="@color/ksy_color_font_alpha"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_tv"
                android:text="@string/video_detail_description" />

            <Button
                android:id="@+id/follow_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@color/ksy_color_card_bg"
                android:textColor="@color/ksy_color_prime"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/list_item_margin"
                android:text="@string/video_detail_focus" />
        </RelativeLayout>

    <TextView
        android:id="@+id/video_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_small_margin"
        android:layout_marginLeft="@dimen/list_item_large_margin"
        android:text="@string/video_detail_title"
        android:textColor="@color/ksy_color_font"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:id="@+id/video_detail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/list_item_large_margin"
        android:layout_marginRight="@dimen/list_item_large_margin"
        android:layout_marginTop="@dimen/list_small_margin"
        android:text="@string/video_detail_content"
        android:textColor="@color/ksy_color_font_alpha"
        android:textSize="@dimen/small_text_size" />
</LinearLayout>
