<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/live_exit_dialog_width"
    android:layout_height="@dimen/live_person_dialog_height"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewClose"
            android:src="@drawable/live_close_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_person"
            android:layout_marginTop="@dimen/live_margin"
            android:layout_below="@+id/imageViewClose"
            android:src="@drawable/live_anchor_detail"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/text_username"
            android:text="@string/live_username_one"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/live_margin_top"
            android:layout_below="@+id/imageView_person"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView"
            android:text="@string/live_praise"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_username"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView2"
            android:text="@string/live_signature_line"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/live_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:id="@+id/layout_live"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/live_bottom_height"
            android:layout_marginTop="@dimen/live_margin_top"
            android:layout_below="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/live_anchor_releat_count"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/live"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fans"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/live_anchor_margin"
            android:layout_marginTop="@dimen/live_margin_top"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@+id/layout_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/live_anchor_releat_count"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/live_fans"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_notice"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/live_anchor_margin"
            android:layout_marginTop="@dimen/live_margin_top"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@+id/layout_fans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/live_anchor_releat_count"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/live_attention"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="@dimen/live_dialog_width"
            android:layout_height="@dimen/live_dialog_height"
            android:text="@string/live_attention_plus"
            android:textColor="@color/lightblue"
            android:id="@+id/button"
            android:background="@drawable/live_button_shape"
            android:layout_marginTop="@dimen/live_person_margin"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layout_fans" />
    </RelativeLayout>

</FrameLayout>
