<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:player="http://schemas.android.com/apk/res-auto"
    android:id="@+id/head_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ksy.media.widget.ui.shortvideo.ShortVideoMediaPlayerView
        android:id="@+id/player_view_short_movie"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/live_heart_margin_height"
        player:playmode="window" />

    <RelativeLayout
        android:id="@+id/short_video_play_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_view_short_movie"
        android:layout_marginBottom="@dimen/list_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/short_video_watch_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/live_person_margin"
            android:layout_marginTop="@dimen/volume_margin_bottom"
            android:src="@drawable/short_eye_image" />

        <TextView
            android:id="@+id/short_video_play_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/short_video_watch_icon"
            android:layout_below="@+id/short_video_watch_icon"
            android:layout_marginTop="@dimen/volume_margin_bottom"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:text="@string/short_video_watch_count_tv_default" />

        <ImageView
            android:id="@+id/short_video_comment_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/live_person_margin"
            android:layout_marginTop="@dimen/volume_margin_bottom"
            android:layout_toRightOf="@+id/short_video_watch_icon"
            android:src="@drawable/live_model_image" />

        <TextView
            android:id="@+id/short_video_comment_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_alignLeft="@+id/short_video_comment_icon"
            android:layout_below="@+id/short_video_comment_icon"
            android:layout_marginTop="@dimen/volume_margin_bottom"
            android:gravity="center_horizontal"
            android:text="@string/short_video_comment_count_tv_default" />

        <ImageView
            android:id="@+id/short_video_favourate_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/live_person_margin"
            android:layout_marginTop="@dimen/volume_margin_bottom"
            android:layout_toRightOf="@+id/short_video_comment_icon"
            android:src="@drawable/live_favorite_image" />

        <TextView
            android:id="@+id/short_video_favourate_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_alignLeft="@+id/short_video_favourate_icon"
            android:layout_below="@+id/short_video_favourate_icon"
            android:layout_marginTop="@dimen/volume_margin_bottom"
            android:gravity="center_horizontal"
            android:text="@string/short_video_favourate__tv_default" />

        <ImageView
            android:id="@+id/short_video_share_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/live_person_margin"
            android:layout_marginTop="@dimen/volume_margin_bottom"
            android:layout_toRightOf="@+id/short_video_favourate_icon"
            android:src="@drawable/short_share_image" />

        <TextView
            android:id="@+id/short_video_share_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_alignLeft="@+id/short_video_share_icon"
            android:layout_below="@+id/short_video_share_icon"
            android:layout_marginTop="@dimen/volume_margin_bottom"
            android:gravity="center_horizontal"
            android:text="@string/short_video_share__tv_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/volume_margin_bottom"
            android:layout_centerVertical="true"
            android:text="@string/short_video_time_tv_default" />
    </RelativeLayout>

</RelativeLayout>